# speech-demo

./: README.md
rest-api-asr/bash_shell/: PLEASE OPEN README.md first.txt  README.md  asr.sh
rest-api-asr/c/: CMakeLists.txt  README.md  asrmain.c  asrmain.h  build_and_asr.sh  common.c  common.h  token.c  token.h
rest-api-asr/java/: README.md  build.gradle  settings.gradle
rest-api-asr/java/gradle/wrapper/: gradle-wrapper.properties
rest-api-asr/java/src/com/baidu/speech/restapi/asrdemo/: AsrMain.java  Base64Util.java
rest-api-asr/java/src/main/java/org/json/: Cookie.java  Property.java  XMLTokener.java
rest-api-asr/linux_c/: CMakeLists.txt  README.md  asrmain.c  asrmain.h  build_and_asr.sh  common.c  token.c
rest-api-asr/php/: 16k-23850.amr  README.md  asr_json.php  asr_raw.php
rest-api-asr/postman/: 16k.m4a  README.md  Token.postman_collection.json  baidu_speech_restapi.postman_collection.json  postman.md  postman_collection.json  postman实用功能.md  更换测试参数.md  极速版.postman_collection.json
rest-api-asr/python/: README.md  asr_json.py  asr_raw.py  asr_raw2.py
rest-api-asr/python/pcm/: 16k.pcm
rest-api-tts/: postman
rest-api-tts/bash_shell/: README.md  token.sh  tts.sh
rest-api-tts/java/: README.md
rest-api-tts/linux_c/: README.md  build_and_tts.sh  common.c  common.h  token.c  ttscurl.c  ttscurl.h  ttsmain.c  ttsmain.h
rest-api-tts/php/: README.md  tts.php
rest-api-tts/postman/: README.md  TTs更换测试参数.md  Tts.postman_collection.json  更换测试参数.md
rest-api-tts/python/: README.md  tts.py
sample-files/: 16k-48000.m4a  8k-122.amr  8k.pcm  README.md
(+8 files in other folders)
